# declare4pylon

./: .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/actions/setup-python-env/: action.yml
.github/workflows/: docs.yml  main.yml  validate-codecov-config.yml
declare4pylon/: __init__.py  choice.py  constraint.py  declare_constraint_loss.py  existence.py  index.html  logic_expression.py  relation.py  shape.py
declare4pylon/choice/: choice.py  exclusive_choice.py  settings.py
declare4pylon/constraints/: __init__.py
declare4pylon/constraints/choice/: choice.py  index.html  template.py
declare4pylon/constraints/existence/: __init__.py  absence.py  index.html  template.py
declare4pylon/constraints/relation/: index.html  template.py
declare4pylon/constraints/relation/existence/: __init__.py  co_existence.py
declare4pylon/constraints/relation/precedence/: alternate_precedence.py  chain_precedence.py
declare4pylon/constraints/relation/response/: __init__.py  chain_response.py
declare4pylon/constraints/relation/succession/: __init__.py  alternate_succession.py  chain_succession.py  succession.py
declare4pylon/existence/: absence.py  exactly.py  existence.py  init.py  last.py  settings.py
declare4pylon/operators/: index.html
declare4pylon/operators/binary/: binary_operator.py  binary_or.py
declare4pylon/operators/unary/: unary_not.py  unary_operator.py
declare4pylon/relation/: existence.py  negative.py  precedence.py  response.py  settings.py  succession.py
docs/: declare4pylon.md  index.md  modules.md
docs/declare4pylon/: operators.md
docs/declare4pylon/constraints/: choice.md  existence.md  relation.md
search/: search_index.json
src/declare4pylon/: declare_constraint_loss.py  foo.py  logic_expression.py
src/declare4pylon/constraints/: __init__.py  constraint.py
src/declare4pylon/constraints/choice/: __init__.py  exclusive_choice.py  template.py
src/declare4pylon/constraints/existence/: __init__.py  exactly.py  existence.py  init.py  last.py  template.py
src/declare4pylon/constraints/relation/: __init__.py  alternate_precedence.py  alternate_response.py  alternate_succession.py  chain_precedence.py  chain_response.py  chain_succession.py  co_existence.py  precedence.py  responded_existence.py  response.py  succession.py  template.py
src/declare4pylon/constraints/relation/existence/: responded_existence.py
src/declare4pylon/constraints/relation/precedence/: __init__.py  chain_precedence.py  precedence.py
src/declare4pylon/constraints/relation/response/: alternate_response.py  chain_response.py  response.py
src/declare4pylon/constraints/relation/succession/: alternate_succession.py  chain_succession.py  succession.py
src/declare4pylon/operators/: __init__.py  operator.py
src/declare4pylon/operators/binary/: __init__.py  binary_and.py  binary_operator.py
src/declare4pylon/operators/unary/: __init__.py  unary_operator.py
tests/: conftest.py  constants.py  test_choice.py  test_declare_constraint_loss.py  test_existence.py  test_foo.py  test_logic_expression.py  test_pylon_integration.py  test_relation.py
tests/choice/: test_choice.py  test_exclusive_choice.py
tests/constraints/: test_constraint.py
tests/constraints/choice/: test_choice.py  test_exclusive_choice.py
tests/constraints/existence/: test_absence.py  test_exactly.py  test_existence.py  test_init.py  test_last.py  test_template.py
tests/constraints/relation/: test_chain_precedence.py  test_co_existence.py  test_responded_existence.py  test_response.py  test_template.py
tests/constraints/relation/existence/: test_co_existence.py  test_responded_existence.py
tests/constraints/relation/precedence/: test_alternate_precedence.py  test_chain_precedence.py  test_precedence.py
tests/constraints/relation/response/: test_alternate_response.py  test_chain_response.py  test_response.py
tests/constraints/relation/succession/: test_alternate_succession.py  test_chain_succession.py  test_succession.py
tests/existence/: test_existence.py
tests/existence.py/: test_absence.py
tests/operators/: test_operator.py
tests/operators/binary/: test_binary_and.py  test_binary_operator.py  test_binary_or.py
tests/operators/unary/: test_unary_not.py  test_unary_operator.py
tests/relation/: test_existence_relation.py  test_negative.py  test_precedence.py  test_response.py  test_succession.py
