[tool.poetry]
name = "declare4pylon"
version = "0.5.0"
description = ""
authors = ["salvatore <salvatorelaiso@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pylon-lib = "^0.1.0"
torch = "^2.6.0"
numpy = "^2.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^25.1.0"
isort = "^6.0.0"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
